links and pics added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
 
         <section class="splidetest">
-            <h2 id="carousel-heading">works</h2>
+            <h1 id="carousel-heading">works</h1>
             <div class="splide-wrapper">
                 <div class="splide" aria-labelledby="carousel-heading">
 
@@ -91,10 +91,12 @@
                                             <i class="bi bi-dash-circle"></i>
                                         </span>
                                         <span class="site-url">
-                                            <p>faudle.ca</p>
+                                            <p><a href="https://myfauxdle.netlify.app"
+                                                    class="url">https://myfauxdle.netlify.app</a>
+                                            </p>
                                         </span>
                                     </div>
-                                    <img src="https://loremflickr.com/400/300/city" />
+                                    <img src="src/images/icons/pictures/fauxdle.png" />
                                 </div>
 
                             </div>
@@ -108,10 +110,12 @@
                                             <i class="bi bi-dash-circle"></i>
                                         </span>
                                         <span class="site-url">
-                                            <p>faudle.ca</p>
+                                            <p><a href="https://nsm-m.github.io/theplantshop/"
+                                                    class="url">https://nsm-m.github.io/theplantshop/</a>
+                                            </p>
                                         </span>
                                     </div>
-                                    <img src="https://loremflickr.com/400/300/city" />
+                                    <img src="src/images/icons/pictures/plantshop.png" />
                                 </div>
                             </div>
                             <div class="splide__slide">
@@ -124,10 +128,12 @@
                                             <i class="bi bi-dash-circle"></i>
                                         </span>
                                         <span class="site-url">
-                                            <p>faudle.ca</p>
+                                            <p><a href="https://nsm-m.github.io/eshop/"
+                                                    class="url">https://nsm-m.github.io/eshop/</a>
+                                            </p>
                                         </span>
                                     </div>
-                                    <img src="https://loremflickr.com/400/300/city" />
+                                    <img src="src/images/icons/pictures/wandero.png" />
                                 </div>
                             </div>
                             <div class="splide__slide">
@@ -140,10 +146,12 @@
                                             <i class="bi bi-dash-circle"></i>
                                         </span>
                                         <span class="site-url">
-                                            <p>faudle.ca</p>
+                                            <p><a href="https://mynytapp.netlify.app/"
+                                                    class="url">https://mynytapp.netlify.app//</a>
+                                            </p>
                                         </span>
                                     </div>
-                                    <img src="https://loremflickr.com/400/300/city" />
+                                    <img src="src/images/icons/pictures/nytapp.png" />
                                 </div>
                             </div>
                         </div>
