--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@
         <!-- 
 
         <section class="works">
-            <div class="projects" id="project1">
+            <div class="" id="project1">
                 <div class="works-section-title">
                     <h1>Works</h1>
                 </div> -->
