--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                                             <i class="bi bi-dash-circle"></i>
                                         </span>
                                         <span class="site-url">
-                                            <p><a href="https://nsm-m.github.io/eshop/" target="_blank"
-                                                    class="url">https://nsm-m.github.io/eshop/</a>
+                                            <p><a href="https://nsm-m.github.io/wandero/" target="_blank"
+                                                    class="url">https://nsm-m.github.io/wandero/</a>
                                             </p>
                                         </span>
                                     </div>
