--- a/index.html
+++ b/index.html
@@ -1,217 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sma M - Portfolio</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+<!-- 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous">
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
-        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous">
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+      crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/js/splide.min.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="dist/css/styles.css" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="dist/css/styles.css">
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#about" class="nav-link">about</a></li>
-                <li><a href="#works" class="nav-link">works</a></li>
-                <li><a href="#contact" class="nav-link">contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="#about" class="nav-link">about</a></li>
+          <li><a href="#works" class="nav-link">works</a></li>
+          <li><a href="#contact" class="nav-link">contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="hero">
-
-        <div class="intro-wrapper">
-            <div class="intro">
-                <h1>Creativity</h1>
-                <h1>Design</h1>
-                <h1>Web Developement</h1>
-            </div>
+      <div class="intro-wrapper">
+        <div class="intro">
+          <h1>Creativity</h1>
+          <h1>Design</h1>
+          <h1>Web Developement</h1>
         </div>
+      </div>
 
-
-        <div class="links">
-            <a href="https://github.com/nsm-m" target="_blank">github</a>
-        </div>
+      <div class="links">
+        <a href="https://github.com/nsm-m" target="_blank">github</a>
+      </div>
     </section>
 
     <div class="wrapper">
+      <section class="about" id="about">
+        <div class="about-wrapper">
+          <div class="about-section-title" id="about-section-title">
+            <h1>about</h1>
+          </div>
 
-        <section class="about" id="about">
-            <div class="about-wrapper">
-                <div class="about-section-title" id="about-section-title">
-                    <h1>about</h1>
-                </div>
+          <div class="bio">
+            <p class="greeting">Hello !</p>
+            <p>
+              I'm Sma, I'm a web developer with a background in Human Sciences
+              and a passion for Art and Design!
+            </p>
+          </div>
+        </div>
+      </section>
 
-                <div class="bio">
-                    <p class="greeting"> Hello !</p>
-                    <p>
-                        I'm Sma, I'm a web developer with a background in
-                        Human Sciences and a passion for Art and
-                        Design!
-                    </p>
-                </div>
-            </div>
-
-        </section>
-
-        <section class="splidetest" id="works">
-            <h1 id="carousel-heading">works</h1>
-            <div class="splide-wrapper">
-                <div class="splide" aria-labelledby="carousel-heading">
-
-
-                    <div class="splide__track">
-                        <div class="splide__list">
-                            <div class="splide__slide">
-
-                                <div class="project-window" id="project-item4">
-
-                                    <div class="window">
-                                        <span class="window-buttons">
-                                            <i class="bi bi-x-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                        </span>
-                                        <span class="site-url">
-                                            <p><a class="url" href="https://myfauxdle.netlify.app"
-                                                    target="_blank">https://myfauxdle.netlify.app</a>
-                                            </p>
-                                        </span>
-                                    </div>
-                                    <img src="src/images/icons/pictures/fauxdle.png" />
-                                </div>
-
-                            </div>
-                            <div class="splide__slide">
-                                <div class="project-window" id="project-item4">
-
-                                    <div class="window">
-                                        <span class="window-buttons">
-                                            <i class="bi bi-x-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                        </span>
-                                        <span class="site-url">
-                                            <p><a href="https://nsm-m.github.io/theplantshop/" target="_blank"
-                                                    class="url">https://nsm-m.github.io/theplantshop/</a>
-                                            </p>
-                                        </span>
-                                    </div>
-                                    <img src="src/images/icons/pictures/plantshop.png" />
-                                </div>
-                            </div>
-                            <div class="splide__slide">
-                                <div class="project-window" id="project-item4">
-
-                                    <div class="window">
-                                        <span class="window-buttons">
-                                            <i class="bi bi-x-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                        </span>
-                                        <span class="site-url">
-                                            <p><a href="https://nsm-m.github.io/wandero/" target="_blank"
-                                                    class="url">https://nsm-m.github.io/wandero/</a>
-                                            </p>
-                                        </span>
-                                    </div>
-                                    <img src="src/images/icons/pictures/wandero.png" />
-                                </div>
-                            </div>
-                            <div class="splide__slide">
-                                <div class="project-window" id="project-item4">
-
-                                    <div class="window">
-                                        <span class="window-buttons">
-                                            <i class="bi bi-x-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                            <i class="bi bi-dash-circle"></i>
-                                        </span>
-                                        <span class="site-url">
-                                            <p><a href="https://mynytapp.netlify.app/" target="_blank"
-                                                    class="url">https://mynytapp.netlify.app//</a>
-                                            </p>
-                                        </span>
-                                    </div>
-                                    <img src="src/images/icons/pictures/nytapp.png" />
-                                </div>
-                            </div>
-                        </div>
+      <section class="splidetest" id="works">
+        <h1 id="carousel-heading">works</h1>
+        <div class="splide-wrapper">
+          <div class="splide" aria-labelledby="carousel-heading">
+            <div class="splide__track">
+              <div class="splide__list">
+                <div class="splide__slide">
+                  <div class="project-window" id="project-item1">
+                    <div class="window">
+                      <span class="window-buttons">
+                        <i class="bi bi-x-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                      </span>
+                      <div class="site-url">
+                        <p>
+                          <a class="url"
+                            href="https://myfauxdle.netlify.app"
+                            target="_blank">
+                            https://myfauxdle.netlify.app
+                          </a>
+                        </p> 
                     </div>
+                    </div>
+                    <img src="src/images/icons/pictures/fauxdle.png" alt="picture of the version of the game wordle">
+                  </div>
                 </div>
+                <div class="splide__slide">
+                  <div class="project-window" id="project-item2">
+                    <div class="window">
+                      <span class="window-buttons">
+                        <i class="bi bi-x-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                      </span>
+                      <div class="site-url">
+                        <p>
+                          <a href="https://nsm-m.github.io/theplantshop/"
+                            target="_blank"
+                            class="url">
+                            https://nsm-m.github.io/theplantshop/
+                          </a>
+                        </p>
+                    </div>
+                    </div>
+                    <img src="src/images/icons/pictures/plantshop.png" alt="picture of the fictional Plant shop demonstration website">
+                  </div>
+                </div>
+                <div class="splide__slide">
+                  <div class="project-window" id="project-item3">
+                    <div class="window">
+                      <span class="window-buttons">
+                        <i class="bi bi-x-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                      </span>
+                      <div class="site-url">
+                        <p>
+                          <a
+                            href="https://nsm-m.github.io/wandero/"
+                            target="_blank"
+                            class="url">
+                            https://nsm-m.github.io/wandero/
+                          </a>
+                        </p>
+                    </div>
+                    </div>
+                    <img src="src/images/icons/pictures/wandero.png" alt="picture of demo website for a fictional travel agency">
+                  </div>
+                </div>
+                <div class="splide__slide">
+                  <div class="project-window" id="project-item4">
+                    <div class="window">
+                      <span class="window-buttons">
+                        <i class="bi bi-x-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                        <i class="bi bi-dash-circle"></i>
+                      </span>
+                      <div class="site-url">
+                        <p>
+                          <a
+                            href="https://mynytapp.netlify.app/"
+                            target="_blank"
+                            class="url">
+                            https://mynytapp.netlify.app//
+                          </a>
+                        </p>
+                    </div>
+                    </div>
+                    <img src="src/images/icons/pictures/nytapp.png" alt="picture of the NYT application">
+                  </div>
+                </div>
+              </div>
             </div>
-        </section>
-
-
+          </div>
+        </div>
+      </section>
     </div>
     <footer>
-
-        <section class="contact-section" id="contact">
-
-            <div class="contact">
-
-                <div class="contact-text">
-                    <div class="contact-section-title">
-                        <h2>contact</h2>
-
-                    </div>
-                    <div class="contact-content">
-                        <p> Want to collaborate or have any question?</p>
-                        <p> Just use this form!</p>
-                    </div>
-                </div>
-
-
-
-
-                <form class="contact-form" action="https://formspree.io/f/myyvdzgq" method="POST">
-                    <label class="user-email">
-                        Your email:
-                        <input class="user-email-input" type="email" name="email">
-                    </label>
-                    <label class="user-message">
-                        Your message:
-                        <textarea class="user-message-input" name="message" rows="10"></textarea>
-                    </label>
-                    <!-- your other form fields go here -->
-                    <button type="submit">Send</button>
-                </form>
+      <section class="contact-section" id="contact">
+        <div class="contact">
+          <div class="contact-text">
+            <div class="contact-section-title">
+              <h2>contact</h2>
             </div>
-        </section>
+            <div class="contact-content">
+              <p>Want to collaborate or have any question?</p>
+              <p>Just use this form!</p>
+            </div>
+          </div>
 
-
-
-
-
-
-
-
-
+          <form
+            class="contact-form"
+            action="https://formspree.io/f/myyvdzgq"
+            method="POST"
+          >
+            <label class="user-email">
+              Your email:
+              <input class="user-email-input" type="email" name="email">
+            </label>
+            <label class="user-message">
+              Your message:
+              <textarea
+                class="user-message-input"
+                name="message"
+                rows="10"></textarea>
+            </label>
+            <!-- your other form fields go here -->
+            <button type="submit">Send</button>
+          </form>
+        </div>
+      </section>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"></script>
     <script src="src/js/index.js"></script>
-</body>
-
+  </body>
 </html>
