--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <section class="hero">
       <div class="intro-wrapper">
         <div class="intro">
-          <h1>Creativity</h1>
+          <h1>Web</h1>
           <h1>Design</h1>
-          <h1>Web Developement</h1>
+          <h1>Development</h1>
         </div>
       </div>
 
