--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
     <section class="hero">
       <div class="intro-wrapper">
         <div class="intro">
-             <div class="about-wrapper">
-               <div class="about-section-title" id="about-section-title">
-                 <!-- <h1>about</h1> -->
-                 <h1 class="greeting">Hello !</h1>
-               </div>
+             <div class="greeting">
+              
+                 <h1>Hi !</h1>
+              </div>
 
                <div class="bio">
                  <p>
@@ -74,7 +73,7 @@
                    and a passion for Art and Design!
                  </p>
                </div>
-               </div>div>
+          </div>
         </div>
       </div>
 
